Fix to EpisodeCard styles - image heights from api changed. needed new max heights - Hide overflow of Episode titles to prevent long titles disrupting layout

--- a/src/EpisodeCard.css
+++ b/src/EpisodeCard.css
@@ -54,6 +54,8 @@
   
   .episode-header-title h1 {
     margin-block: 0em;
+    max-height: 1.2em;
+    overflow: hidden;
   }
   
   .episode-header-right {
@@ -86,18 +88,18 @@
   
   .episode-image img, .episode-image object {
     max-width: 100%;
-    max-height: 114px;
+    max-height: 94px;
   }
   
   @media screen and (min-width: 900px) {
     .episode-image img, .episode-image object {
-        max-height: 128px;
+        max-height: 108px;
     }
   }
   
   @media screen and (min-width: 1200px) {
     .episode-image img, .episode-image object {
-        max-height: 142px;
+        max-height: 122px;
     }
   }
   
